Revert "fix(project): prevent too small modals"
This reverts commit ac56e0a78deb660433e1ea4a5004321738f8b663.

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -23,6 +23,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
   height: 100%;
 }
